; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_io_dp.c_gdFreeDynamicCtx.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_io_dp.c_gdFreeDynamicCtx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdIOCtx = type { i64, i64 }
%struct.TYPE_2__ = type { %struct.gdIOCtx* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gdIOCtx*)* @gdFreeDynamicCtx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gdFreeDynamicCtx(%struct.gdIOCtx* %0) #0 {
  %2 = alloca %struct.gdIOCtx*, align 8
  %3 = alloca %struct.gdIOCtx*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  store %struct.gdIOCtx* %0, %struct.gdIOCtx** %2, align 8
  %5 = load %struct.gdIOCtx*, %struct.gdIOCtx** %2, align 8
  %6 = bitcast %struct.gdIOCtx* %5 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %6, %struct.TYPE_2__** %4, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.gdIOCtx*, %struct.gdIOCtx** %8, align 8
  store %struct.gdIOCtx* %9, %struct.gdIOCtx** %3, align 8
  %10 = load %struct.gdIOCtx*, %struct.gdIOCtx** %2, align 8
  %11 = call i32 @gdFree(%struct.gdIOCtx* %10)
  %12 = load %struct.gdIOCtx*, %struct.gdIOCtx** %3, align 8
  %13 = getelementptr inbounds %struct.gdIOCtx, %struct.gdIOCtx* %12, i32 0, i32 1
  store i64 0, i64* %13, align 8
  %14 = load %struct.gdIOCtx*, %struct.gdIOCtx** %3, align 8
  %15 = getelementptr inbounds %struct.gdIOCtx, %struct.gdIOCtx* %14, i32 0, i32 0
  store i64 0, i64* %15, align 8
  %16 = load %struct.gdIOCtx*, %struct.gdIOCtx** %3, align 8
  %17 = call i32 @gdFree(%struct.gdIOCtx* %16)
  ret void
}

declare dso_local i32 @gdFree(%struct.gdIOCtx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
